# script

./: .gitattributes  README.md  Time-Perspective.md  a2ttLm1k  go_vs_java_comparison.md  java_vs_csharp_comparison.md  java_vs_kotlin_comparison.md  java_vs_python_comparison.md  java_vs_rust_comparison.md  java_vs_typescript_comparison.md  network_exit_ip.md  one_person_company_tools.md  test.ps1  test.ts  totp.py
aws/: AWS Storage Gateway.md  Amazon Aurora 全球数据库.md  Amazon CloudWatch Logs.md  Amazon DynamoDB.md  Amazon SQS 消息大小限制.md  Aurora 跨区域灾难恢复.md  Auto Scaling 扩展策略类型.md  CPU 密集型批处理作业.md  EBS_快照.md  EC2组网络延迟敏感.md  ECS自动扩展.md  Lake Formation 权限模型.md  RDS Multi-AZ 高可用.md  Savings Plans vs Reserved Instances.md  VPC 内部通信.md  VPC 出站流量控制.md  Web应用层 L7安全 SQL 注入防护.md  aws.js  cloudfront动态图片处理（resize + format）.md  ec2_linux访问.md  ec2实例自动分配.md  ec2成本.md  ec2扩展和缩减.md  file_system.md  file_system2.md  net Gateway.md  rds多个区访问.md  s3文件上传_异步通知.md  s3访问频率查看.md  vpc_to_vpc_cider对等连接.md  三层架构.md  事件驱动架构.md  健康 EC2 实例的 IP 地址.md  批处理（Batch processing）架构.md  数据传输.md  数据传输2.md  文件共享.md  本地文件存储卷恢复.md  来自互联网的流量无法到达 EC2 实例.md  消息顺序保证.md  (+7 more)
book/: cloudflare_tunnel_video_scripts.md  logic_for_normal_people.md  programmer_info_tools.md  readme.md  script-00.md  script-01.md  script-02.md  script-03.md  script-05.md  script-06.md  thinking.md
drive/: check.ps1  scan.ps1  setting.md  sync.ps1
file/: dec.ps1  enc.ps1  private  public
filesystem/: rclone.md  rclone_multi_sync.sh  (+3 more)
solana/compress/: Cargo.toml  README.md  package_deb.sh  package_release.sh
solana/compress/src/: main.rs
(+455 files in other folders)
