[package]
name = "compress"
version = "2.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Ultra-simple secure file compression tool - no password management needed"
license = "MIT"
repository = "https://github.com/yourusername/compress"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
aes = "0.8"
cbc = "0.1.2"
cipher = "0.4"
sha2 = "0.10"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
argon2 = "0.5"
